# nlp-tools

./: .gitignore  MANIFEST.in  Pipfile  README.md  docker-compose.yml  explore.py  predict.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  train.py  validate.py
config/: config.colab.yml  config.docker.yml  config.yml
datasets/: arxiv_papers.py  base.py  cifar10.py  conference.py  imdb.py  livedoor_news.py  mnist.py  msacademic.py  msmarco.py  neurips.py
datasets/kaggle/: google_ai4_code.py  patent_matching.py
docker/: docker-compose.yml
embeddings/: base.py  fast_text.py  glove.py  identity.py  sentence_transformer.py  tfidf.py
models/: base.py  dnn_l1.py  gru_highway.py  gru_l1.py  gru_linear.py  gru_ln.py  gru_resnet.py  layers.py
models/classifiers/: gru_highway.py  gru_linear.py  gru_resnet.py
models/generative/: autoencoder.py  gan.py
models/layers/: gan.py  resnet.py
models/mrc/: snet.py
nlp-tools/nlp-tools/datasets/kaggle/: utils.py
nlp-tools/nlp-tools/models/generative/: autoencoder.py
nlp-tools/nlp_tools/config/: config.yml
nlp-tools/nlp_tools/datasets/: imdb.py
nlp-tools/nlp_tools/models/classifiers/: gru_highway.py  gru_resnet.py
nlp-tools/nlp_tools/utils/: watchers.py
nlp_tools/config/: config.colab.yml  config.toml
nlp_tools/datasets/: arxiv_papers.py  base.py  cifar10.py  conference.py  imdb.py  livedoor_news.py  mnist.py  msacademic.py
nlp_tools/embeddings/: base.py  fast_text.py  glove.py  identity.py  sentence_transformer.py  tfidf.py
nlp_tools/models/: base.py  dla.py
nlp_tools/models/classifiers/: gru_highway.py  gru_linear.py  gru_resnet.py
nlp_tools/models/mrc/: snet.py
nlp_tools/tokenizers/: __init__.py  base.py  char_tokenizers.py  word_tokenizers.py
nlp_tools/trainer/: autoencoder.py  base.py  gan.py
nlp_tools/utils/: data.py  google_drive.py  logger.py  mecab.py  semanticscholar.py  tokenizers.py  utils.py  watchers.py
nlp_tools/utils/download/: neurips.py
nlp_tools/utils/resources/fonts/: Utatane_v1.1.0.7z
nlp_tools/utils/resources/texts/: JA_STOPWORDS_SLOTHLIB.txt
reports/: .env  freeze.py
reports/apps/: app.py
reports/apps/dataset_report/: views.py
reports/apps/dataset_report/static/: main.js  style.css
reports/apps/dataset_report/static/css/: style.css
reports/apps/dataset_report/static/scripts/: main.js
reports/apps/dataset_report/templates/dataset_report/: base.html  base.j2  index.html  index.j2  report.html  report.j2
resources/html_rsc/: main.css  main.js
stats/: stats.py
tests/: test_mecab.py  test_token.py  test_tokenizers.py  test_utils_config.py  test_wordcloud.py
tests/data/: test.config.toml
tests/utils/: test_tokenizers.py
trainer/: autoencoder.py  base.py  gan.py
utils/: data.py  google_drive.py  logger.py  mecab.py  papers.py  report.py  semanticscholar.py  tokenizers.py  utils.py  watchers.py
utils/data/: neurips.py
