[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 40.9.0", "wheel"]

[project]
authors = [
  {name = "akitenkrad", email = "akitenkrad@gmail.com"},
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
  "arxiv",
  "beautifulsoup4",
  "click",
  "colorama",
  "gensim",
  "attrdict@git+https://github.com/akitenkrad/attrdict",
  "h5py",
  "ipadic",
  "ipython",
  "ipywidgets",
  "kaggle",
  "kaleido",
  "mecab-python3",
  "networkx",
  "nltk",
  "numpy",
  "pandas",
  "patool",
  "plotly",
  "progressbar",
  "py-cpuinfo",
  "pykakasi",
  "python-dateutil",
  "python-dotenv",
  "pyunpack",
  "PyYAML",
  "requests",
  "scikit-learn",
  "scipy",
  "seaborn",
  "sumeval",
  "tensorboard",
  "torch",
  "torchinfo",
  "torchtext",
  "torchvision",
  "tqdm",
  "unidic",
  "wordcloud",
]
description = "tools natural language processing"
license = {file = "LICENSE"}
name = "nlp_tools"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "pytest",
  "flake8",
  "mypy",
  "black",
  "isort",
  "types-python-dateutil",
  "types-PyYAML",
  "types-requests",
  "typing-extensions",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools]
package-dir = {"" = "nlp-tools"}

[tools.black]
line-length = 150

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 150
